Added arrow to bar activity, gonna checkout into gyroscope now

--- a/HCIProject/app/src/main/AndroidManifest.xml
+++ b/HCIProject/app/src/main/AndroidManifest.xml
@@ -23,19 +23,13 @@
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".BarActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".DrinkActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
+        <activity android:name=".DrinkActivity"></activity>
     </application>
 
 </manifest>
