Infinite scrolling working

--- a/HCIProject/app/src/main/AndroidManifest.xml
+++ b/HCIProject/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BarActivity"/>
-        <activity android:name=".DrinkActivity"/>
+        <activity android:name=".BarActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".DrinkActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
