--- a/HCIProject/app/src/main/AndroidManifest.xml
+++ b/HCIProject/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DrinkActivity"></activity>
+        <activity android:name=".DrinkActivity" />
+        <activity android:name=".add_new_drink"></activity>
     </application>
 
 </manifest>
