changed manifest to remove adapters since only activities go here

--- a/HCIProject/app/src/main/AndroidManifest.xml
+++ b/HCIProject/app/src/main/AndroidManifest.xml
@@ -28,10 +28,7 @@
         <activity
             android:name=".DrinkActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".PriceRangeAdapter" />
-        <activity android:name=".util.PriceRangeActivity" />
-        <activity android:name=".util.PriceRangeAdapter" />
-        <activity android:name=".PriceRangeActivity"></activity>
+        <activity android:name=".PriceRangeActivity" />
     </application>
 
 </manifest>
