--- a/HCIProject/app/build.gradle
+++ b/HCIProject/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.android.support:recyclerview-v7:25.0.1'
 
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
