activities all linked up

--- a/HCIProject/app/src/main/AndroidManifest.xml
+++ b/HCIProject/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         <activity android:name=".PriceRangeActivity" />
         <activity android:name=".add_new_drink" />
         <activity android:name=".DrinkTypeActivity" />
-        <activity android:name=".DrinkTypeBarsActivity"></activity>
+        <activity android:name=".DrinkTypeBarsActivity" />
+        <activity android:name=".BarResultsActivity"></activity>
     </application>
 
 </manifest>
